// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DetailText /> should match snapshot with label for size 1 1`] = `
<span
  class="root detail1"
>
  Hello World!
</span>
`;

exports[`<DetailText /> should match snapshot with label for size 2 1`] = `
<span
  class="root detail2"
>
  Hello World!
</span>
`;

exports[`<DetailText /> should match snapshot with label for size 3 1`] = `
<span
  class="root detail3"
>
  Hello World!
</span>
`;

exports[`<DetailText /> should match snapshot without label 1`] = `
<span
  className="root detail1"
/>
`;

exports[`<DetailTextLoader /> should match snapshot 1`] = `
<span
  class="root root loadingDetail1 blinking"
/>
`;
